--- a/index.html
+++ b/index.html
@@ -70,19 +70,19 @@
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="../Bootstrap5/Bootstrap5-Exercise/Bootstrap5-Exercise/images/banner1.jpg" class="d-block w-100" alt="...">
+              <img src="./Bootstrap5-Exercise/Bootstrap5-Exercise/images/banner1.jpg" class="d-block w-100" alt="...">
               <div class="carousel-overlay">
                 <button class="btn btn-primary">See more</button>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="../Bootstrap5/Bootstrap5-Exercise/Bootstrap5-Exercise/images/banner2.jpg" class="d-block w-100" alt="...">
+              <img src="./Bootstrap5-Exercise/Bootstrap5-Exercise/images/banner2.jpg" class="d-block w-100" alt="...">
               <div class="carousel-overlay">
                 <button class="btn btn-primary">See more</button>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="../Bootstrap5/Bootstrap5-Exercise/Bootstrap5-Exercise/images/banner3.jpg" class="d-block w-100" alt="...">
+              <img src="./Bootstrap5-Exercise/Bootstrap5-Exercise/images/banner3.jpg" class="d-block w-100" alt="...">
               <div class="carousel-overlay">
                 <button class="btn btn-primary">See more</button>
               </div>
@@ -149,7 +149,7 @@
     <div class="row">
       <div class="col-sm-6">
         <div class="card border-5 m-3 p-1">
-            <img src="../Bootstrap5/Bootstrap5-Exercise/Bootstrap5-Exercise/images/banner1.jpg" alt="Image" class="img-fluid">
+            <img src="./Bootstrap5-Exercise/Bootstrap5-Exercise/images/banner1.jpg" alt="Image" class="img-fluid">
         </div>
       </div>
       <div class="col-sm-6 mt-3">
@@ -177,7 +177,7 @@
 </style>
 
 <script>
-    var imageDirectory = "/Bootstrap5/Bootstrap5-Exercise/Bootstrap5-Exercise/images/products/";
+    var imageDirectory = "./Bootstrap5-Exercise/Bootstrap5-Exercise/images/products/";
     var numberOfImages = 15;
     var gallery = document.getElementById("image-gallery");
 
