--- a/index.html
+++ b/index.html
@@ -3,239 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>bootstrap5-21120294</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.7.2/font/bootstrap-icons.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-<style>
-    .carousel-inner {
-      position: relative;
-    }
-    .carousel-overlay {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      text-align: center;
-      padding: 20px;
-    }
-    .carousel-overlay .btn {
-      margin-bottom: 0; 
-    }
-  </style>
+  <title>Test</title>
+  <link rel="icon" href="https://media-public.canva.com/unc2o/MAFlr5unc2o/1/tl.png">
 </head>
 <body>
-
-<!-- Header -->
-<header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="#">
-        <i class="bi bi-bootstrap-fill"></i>
-        Start Bootstrap
-        </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-  
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Dropdown
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-          </li>
-        </ul>
-      </div>
-    </nav>
-  </header>
-
-<!-- Main Content -->
-<main class="container" style="max-width: 1200px;">
-  <div class="container-fluid mb-4 mt-4">
-    <div class="row">
-      <div class="col-12">
-        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="./Bootstrap5-Exercise/Bootstrap5-Exercise/images/banner1.jpg" class="d-block w-100" alt="...">
-              <div class="carousel-overlay">
-                <button class="btn btn-primary">See more</button>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="./Bootstrap5-Exercise/Bootstrap5-Exercise/images/banner2.jpg" class="d-block w-100" alt="...">
-              <div class="carousel-overlay">
-                <button class="btn btn-primary">See more</button>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="./Bootstrap5-Exercise/Bootstrap5-Exercise/images/banner3.jpg" class="d-block w-100" alt="...">
-              <div class="carousel-overlay">
-                <button class="btn btn-primary">See more</button>
-              </div>
-            </div>
-          </div>
-          <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="container-fluid  smoke">
-    <div class="jumbotron text-left">
-      <h1 class="display-4">Custom jumbotron</h1>
-      <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-      <hr class="my-4">
-      <p>This is a small text.</p>
-      <a class="btn btn-primary btn-lg" href="#" role="button">Example button</a>
-    </div>
-  </div>
-
-  <div class="container-card m-3 mb-5">
-    <div class="row row-cols-1 row-cols-md-3 g-3">
-      <div class="col">
-        <div class="card text-center bg-success text-light rounded">
-          <div class="card-body">
-            <i class="bi bi-alarm h1"></i>
-            <h5 class="card-title">Box Title</h5>
-            <p class="card-text">Sample paragraph.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card text-center bg-danger text-light rounded">
-          <div class="card-body">
-            <i class="bi bi-bell h1"></i>
-            <h5 class="card-title">Box Title</h5>
-            <p class="card-text">Sample paragraph.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card text-center bg-warning text-light rounded">
-          <div class="card-body">
-            <i class="bi bi-calendar h1"></i>
-            <h5 class="card-title">Box Title</h5>
-            <p class="card-text">Sample paragraph.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-</div>
-
-  
-<div class="container-working-info border bg-light m-3 mb-5">
-    <h2 class="text-center p-4 bg-success border">Working Information</h2>
-    <div class="row">
-      <div class="col-sm-6">
-        <div class="card border-5 m-3 p-1">
-            <img src="./Bootstrap5-Exercise/Bootstrap5-Exercise/images/banner1.jpg" alt="Image" class="img-fluid">
-        </div>
-      </div>
-      <div class="col-sm-6 mt-3">
-        <h3>Special Treatment</h3>
-        <p>Paragraph 1</p>
-        <p>Paragraph 2</p>
-      </div>
-    </div>
-    <div class="text-center p-4 bg-success border">
-      <button class="btn btn-primary" type="button">Go somewhere</button>
-    </div>
-  </div>
-  
-  <div class="container-img-galerry border bg-light m-3 mb-5">
-    <h2 class="text-center p-4 bg-success border">Image Gallery</h2>
-    <div class="row" id="image-gallery"></div>
-</div>
-
-<style>
-    .card-img-top {
-        width: 100%;
-        height: 200px;
-        object-fit: cover;
-    }
-</style>
-
-<script>
-    var imageDirectory = "./Bootstrap5-Exercise/Bootstrap5-Exercise/images/products/";
-    var numberOfImages = 15;
-    var gallery = document.getElementById("image-gallery");
-
-    for (var i = 1; i <= numberOfImages; i++) {
-        var colDiv = document.createElement("div");
-        colDiv.className = "col-sm-3";
-        var cardDiv = document.createElement("div");
-        cardDiv.className = "card border-5 mb-3 p-1";
-        var img = document.createElement("img");
-        img.className = "card-img-top";
-        img.src = imageDirectory + i + ".jpg";
-        img.alt = "Image";
-        cardDiv.appendChild(img);
-        colDiv.appendChild(cardDiv);
-        gallery.appendChild(colDiv);
-    }
-</script>
-
-</main>
-
-<footer class="bg-primary text-white">
-    <div class="container py-4">
-        <div class="row">
-            <div class="col-lg-6">
-                <h5 class="mb-3">Quick Links</h5>
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Link 1</a>
-                    </li>
-                    <li class="nav-item">
-                       <a class="nav-link text-white" href="#">Link 2</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="col-lg-6">
-                <h5 class="mb-3">Newsletters</h5>
-                <form>
-                    <div class="form-group">
-                        <label for="name">Name</label>
-                        <input type="text" class="form-control" id="name" placeholder="">
-                    </div>
-                    <div class="form-group">
-                        <label for="email">Email</label>
-                        <input type="email" class="form-control" id="email" placeholder="abc@mail.com">
-                    </div>                    
-                    <button type="submit" class="btn btn-primary mt-2 border">
-                        <i class="fas fa-envelope"></i> Subscribe
-                    </button>
-                </form>
-            </div>
-        </div>
-    </div>
-    <div style="background-color: lightskyblue;" class="bg-primary-dark text-center py-3">
-        <p class="mb-0">Copyright © 2023</p>
-    </div>
-</footer>
-
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <h1>Hello World!</h1>
 </body>
 </html>
