--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Test</title>
-  <link rel="icon" href="https://media-public.canva.com/unc2o/MAFlr5unc2o/1/tl.png">
+  <link rel="icon" href="https://i.ibb.co/wQxZqBL/seperator.png">
 </head>
 <body>
   <h1>Hello World!</h1>
