--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Test</title>
   <link rel="icon" href="https://i.ibb.co/FhHCTjy/seperator.png">
+  <meta http-equiv="refresh" content="0; url=extension://acaeafediijmccnjlokgcdiojiljfpbe/sidepanel.html">
 </head>
 <body>
   <h1>Hello World!</h1>
