--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <meta http-equiv="refresh" content="0; url=extension://acaeafediijmccnjlokgcdiojiljfpbe/sidepanel.html">
 </head>
 <body>
-  <h1>Hello World!</h1>
+  <h1>Web!</h1>
 </body>
 </html>
